@@ -5,9 +5,6 @@
 #ifndef DICTPATH_INC
 #define DICTPATH_INC
 
-extern char *d2triepath;	// Path for dict
-
-
 #ifdef WIN32
 #define PATHSEPERATOR "\\"
 #else
